add client explore project

--- a/src/B2Net.csproj
+++ b/src/B2Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>.NET library for Backblaze's B2 Cloud Storage</Description>
     <AssemblyTitle>B2.Net</AssemblyTitle>
-    <TargetFrameworks>netstandard1.5;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net45</TargetFrameworks>
     <AssemblyName>B2.Net</AssemblyName>
     <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
@@ -43,6 +43,16 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="B2NetClient\**" />
+    <EmbeddedResource Remove="B2NetClient\**" />
+    <None Remove="B2NetClient\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net45'">
     <DefineConstants>NET45;NETFULL</DefineConstants>
