--- a/src/B2NetClient/B2StorageClient.csproj
+++ b/src/B2NetClient/B2StorageClient.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{AB9C9F6A-BD3F-480E-A938-BFB8199671AC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>FileExplorer</RootNamespace>
-    <AssemblyName>File Explorer</AssemblyName>
+    <AssemblyName>B2StorageClient</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
