--- a/src/B2NetClient/packages.config
+++ b/src/B2NetClient/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net471" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net471" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net48" />
   <package id="Costura.Fody" version="1.6.2" targetFramework="net471" developmentDependency="true" />
   <package id="Fody" version="2.0.0" targetFramework="net471" developmentDependency="true" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
