add download file

--- a/src/B2NetClient/B2StorageClient.csproj
+++ b/src/B2NetClient/B2StorageClient.csproj
@@ -71,9 +71,14 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Ookii.Dialogs.Wpf, Version=5.0.0.0, Culture=neutral, PublicKeyToken=66aa232afad40158, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ookii.Dialogs.Wpf.5.0.1\lib\net462\Ookii.Dialogs.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -148,9 +153,11 @@
     <Compile Include="Models\FileSystemObject.cs" />
     <Compile Include="Models\Folder.cs" />
     <Compile Include="Services\B2ClientService.cs" />
+    <Compile Include="Services\B2ClientStateManager.cs" />
     <Compile Include="Services\FileIconService.cs" />
     <Compile Include="Services\FileSystemService.cs" />
     <Compile Include="Services\Interfaces\IB2ClientService.cs" />
+    <Compile Include="Services\Interfaces\IB2ClientStateManager.cs" />
     <Compile Include="Services\Interfaces\IFileIconService.cs" />
     <Compile Include="Services\Interfaces\IFileSystemService.cs" />
     <Compile Include="Services\Interfaces\ISettingService.cs" />
