--- a/src/B2NetClient/packages.config
+++ b/src/B2NetClient/packages.config
@@ -8,4 +8,5 @@
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net48" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Ookii.Dialogs.Wpf" version="5.0.1" targetFramework="net48" />
 </packages>
